workday/13.1/modules/ROOT/pages/workday-connector-upgrade-migrate.adoc
= Upgrade Workday Connector to 13.x - Mule 4
:page-aliases: connectors::workday/workday-connector-upgrade-migrate.adoc

Upgrade Anypoint Connector for Workday (Workday Connector) to version 13.x.x.

== Supported Upgrade Paths

[%header,cols="50a,50a"]
|===
|From Version | To Version
|12.1 |13.x
|===

== What's Changed

=== 13.x

* Upgraded the Workday API to 35.0
* Added the *Moments* operation, which enables you to invoke the Workday Moments web service
* Removed the version from the `workday:config-version-34-config` and `workday:basic-authentication-api-v34-connection` elements.
+
In the previous release, the XML for these elements looked like this:
+
[source,xml,linenums]
----
<workday:config-version-34-config name="My_Workday_Connection"
doc:name="Workday Config" >
<workday:basic-authentication-api-v34-connection password="${workday.password}"
tenantName="${workday.tenantName}" userName="${workday.userName}" />
</workday:config-version-34-config>
----
+
The XML now looks like this:
+
[source,xml,linenums]
----
<workday:config name="My_Workday_Connection"
doc:name="Workday Config" >
<workday:basic-authentication-api-connection password="${workday.password}"
tenantName="${workday.tenantName}" userName="${workday.userName}" />
</workday:config>
----

== Upgrade Prerequisites

Before you upgrade Workday Connector from version 12.x to version 13.x, you must:

. Create a backup of your files, data, and configuration in case you need to restore the connector to the previous version.
. Install Workday Connector 13.x to replace the Workday operations that were previously included in Workday Connector 13.x.

== Upgrade Steps

Follow these steps to perform the upgrade from Workday Connector 12.x to Workday Connector 13.x:

. In Studio, create a Mule project.
. In the *Mule Palette* view, click *Search in Exchange*.
. In the *Add Dependencies to Project* window, enter `workday` in the search field.
. In the *Available modules* section, select *Workday Connector - Mule 4* and click *Add*.
. Click *Finish*.
. Verify that the `workday-connector` dependency version is `13.1.0` in the `pom.xml` file.

Studio upgrades the connector automatically.

== Verify the Upgrade

After you install the latest version of the connector, follow these steps to verify the upgrade:

. In Studio, verify that there are no errors in the *Problems* or *Console* views.
. Check the project `pom.xml` file and verify that there are no problems.
. Test the connection and verify that the operations work.

== Troubleshooting

If there are problems with caching the parameters and caching the metadata, try restarting Studio.

== Revert the Upgrade

If you must revert to the previous version of Workday Connector, change the `workday-connector` dependency version `13.x.x` in the project's `pom.xml` file to the previous version.

You must update the project's `pom.xml` file in Studio.

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* https://help.mulesoft.com[MuleSoft Help Center]
