workday/16.0/modules/ROOT/pages/workday-connector-upgrade-migrate.adoc
= Upgrading and Migrating Workday Connector to 16.x - Mule 4
:page-aliases: connectors::workday/workday-connector-upgrade-migrate.adoc

Upgrade Anypoint Connector for Workday (Workday Connector) to version 16.x.x.

== Supported Upgrade Paths

[%header,cols="50a,50a"]
|===
|From Version | To Version
|15.x |16.x
|===

== What's Changed

=== 16.x

* The connector is upgraded to Workday API version 40.0.
* The connector now supports the *ACA Partner Integrations* and *Student Transfer Credit* operations.
* The connector now throws the new `WORKDAY:BAD_REQUEST` error.
* The com.fasterxml.jackson.core library is upgraded to version 2.15.0-rc1 to address reported security vulnerabilities. 
* The mule-soap-engine library is upgraded to version 1.7.2 to address reported security vulnerabilities. 
* The org-springframework library is upgraded to version 5.3.27 to address reported security vulnerabilities.

== Upgrade Prerequisites

Before you upgrade Workday Connector from version 15.x to version 16.x, you must:

. Create a backup of your files, data, and configuration in case you need to restore the connector to the previous version.
. Install Workday Connector 16.x to replace the Workday operations that were previously included in Workday Connector 15.x.

== Upgrade Steps

Follow these steps to perform the upgrade from Workday Connector 15.x to Workday Connector 16.x:

. In Studio, create a Mule project.
. In the *Mule Palette* view, click *Search in Exchange*.
. In the *Add Dependencies to Project* window, enter `workday` in the search field.
. In the *Available modules* section, select *Workday Connector - Mule 4* and click *Add*.
. Click *Finish*.
. Verify that the `workday-connector` dependency version is `16.0.0` in the `pom.xml` file.

Studio upgrades the connector automatically.

== Verify the Upgrade

After you install the latest version of the connector, follow these steps to verify the upgrade:

. In Studio, verify that there are no errors in the *Problems* or *Console* views.
. Check the project `pom.xml` file and verify that there are no problems.
. Test the connection and verify that the operations work.

== Troubleshooting

If there are problems with caching the parameters and caching the metadata, try restarting Studio.

== Revert the Upgrade

If you must revert to the previous version of Workday Connector, change the `workday-connector` dependency version `16.x.x` in the project's `pom.xml` file to the previous version.

You must update the project's `pom.xml` file in Studio.

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* https://help.mulesoft.com[MuleSoft Help Center]
